force-app/main/default/objects/Linea_de_Proyecto__c/fields/ImporteIntercompanyaelevar__c.field-meta.xml
<CustomField>
    <fullName>ImporteIntercompanyaelevar__c</fullName>
    <formula>Importe_Total_Intercompany__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ImporteIntercompanyaelevar</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>