force-app/main/default/objects/Linea_de_Proyecto__c/fields/Inducido__c.field-meta.xml
<CustomField>
    <fullName>Inducido__c</fullName>
    <label>Inducido</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <label>Bussines Consulting</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>Talent Solutions</label>
            </value>
            <value>
                <fullName>05002</fullName>
                <label>Technology &amp; Cloud</label>
            </value>
            <value>
                <fullName>Cibersecurity</fullName>
            </value>
            <value>
                <fullName>22001</fullName>
                <label>Cloud Nine Data</label>
            </value>
            <value>
                <fullName>4006</fullName>
                <label>Customer Services</label>
            </value>
            <value>
                <fullName>19004</fullName>
                <label>Data Foundation</label>
            </value>
            <value>
                <fullName>19002</fullName>
                <label>Data Governance</label>
            </value>
            <value>
                <fullName>05004</fullName>
                <label>Devops</label>
            </value>
            <value>
                <fullName>02002</fullName>
                <label>Digital Business PF</label>
            </value>
            <value>
                <fullName>02006</fullName>
                <label>Digital Services</label>
            </value>
            <value>
                <fullName>04002</fullName>
                <label>Document Solutions</label>
            </value>
            <value>
                <fullName>17003</fullName>
                <label>E&amp;E Transformation</label>
            </value>
            <value>
                <fullName>02003</fullName>
                <label>ECommerce</label>
            </value>
            <value>
                <fullName>02004</fullName>
                <label>Enterprise Search</label>
            </value>
            <value>
                <fullName>04005</fullName>
                <label>ERP</label>
            </value>
            <value>
                <fullName>03009</fullName>
                <label>Frontend Services</label>
            </value>
            <value>
                <fullName>03004</fullName>
                <label>Hybrid Integration</label>
            </value>
            <value>
                <fullName>04008</fullName>
                <label>IA Cognitive Datalab</label>
            </value>
            <value>
                <fullName>17004</fullName>
                <label>Industry X Solutions</label>
            </value>
            <value>
                <fullName>19003</fullName>
                <label>Innovation Analytics</label>
            </value>
            <value>
                <fullName>04004</fullName>
                <label>Inv. Ind. Comunytek</label>
            </value>
            <value>
                <fullName>03003</fullName>
                <label>Java &amp; Open Solution</label>
            </value>
            <value>
                <fullName>03006</fullName>
                <label>Microsoft Dev Sol</label>
            </value>
            <value>
                <fullName>03002</fullName>
                <label>Mobile &amp; IOT</label>
            </value>
            <value>
                <fullName>02007</fullName>
                <label>Portal Enterprise PF</label>
            </value>
            <value>
                <fullName>02008</fullName>
                <label>Portal Opensource</label>
            </value>
            <value>
                <fullName>03005</fullName>
                <label>Processes</label>
            </value>
            <value>
                <fullName>16006</fullName>
                <label>QA Services</label>
            </value>
            <value>
                <fullName>08001</fullName>
                <label>Salesforce FI Servic</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>