force-app/main/default/objects/Linea_de_Proyecto__c/fields/Inducido_text__c.field-meta.xml
<CustomField>
    <fullName>Inducido_text__c</fullName>
    <formula>Text(Inducido__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inducido text</label>
    <type>Text</type>
</CustomField>