force-app/main/default/objects/Linea_de_Proyecto__c/fields/Intercompany__c.field-meta.xml
<CustomField>
    <fullName>Intercompany__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Intercompany</label>
    <type>Checkbox</type>
</CustomField>