force-app/main/default/objects/Linea_de_Proyecto__c/fields/Jefe_de_Proyecto_de_Ejecucion__c.field-meta.xml
<CustomField>
    <fullName>Jefe_de_Proyecto_de_Ejecucion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Jefe de Proyecto de Ejecución</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Jefe_de_Proyecto</value>
        </filterItems>
        <filterItems>
            <field>Contact.Activo__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Proyectos de Ejecución</relationshipLabel>
    <relationshipName>Lineas_de_JP_Ejecucion</relationshipName>
    <type>Lookup</type>
</CustomField>