force-app/main/default/objects/Linea_de_Proyecto__c/fields/Jefe_de_Proyecto_de_Preventa__c.field-meta.xml
<CustomField>
    <fullName>Jefe_de_Proyecto_de_Preventa__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Operation user of the area involved</inlineHelpText>
    <label>Jefe de Proyecto de Preventa</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Jefe de Proyecto</value>
        </filterItems>
        <filterItems>
            <field>Contact.Activo__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Proyectos de Preventa</relationshipLabel>
    <relationshipName>Lineas_de_Proyecto</relationshipName>
    <type>Lookup</type>
</CustomField>