force-app/main/default/objects/Linea_de_Proyecto__c/fields/Jefe_Proyecto_Ejecucion_Adicional__c.field-meta.xml
<CustomField>
    <fullName>Jefe_Proyecto_Ejecucion_Adicional__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Jefe Proyecto Ejecución Adicional</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordType.Id</field>
            <operation>equals</operation>
            <value>0120N000000UzjjQAC</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Líneas de Proyecto (Jefe Proyecto Ejecución Adicional)</relationshipLabel>
    <relationshipName>L_neas_de_Proyecto</relationshipName>
    <type>Lookup</type>
</CustomField>