force-app/main/default/objects/Linea_de_Proyecto__c/fields/Jornadas__c.field-meta.xml
<CustomField>
    <fullName>Jornadas__c</fullName>
    <label>Jornadas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>