force-app/main/default/objects/Linea_de_Proyecto__c/fields/Licencias_activas__c.field-meta.xml
<CustomField>
    <fullName>Licencias_activas__c</fullName>
    <label>Licencias activas</label>
    <summaryFilterItems>
        <field>Licencia__c.Activa__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Licencia__c.Linea_de_Proyecto__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>