force-app/main/default/objects/Linea_de_Proyecto__c/fields/Licencias_validadas__c.field-meta.xml
<CustomField>
    <fullName>Licencias_validadas__c</fullName>
    <formula>Licencias_activas__c = Contador_Licencias_validadas__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Checked if the amount of active licenses is the same as the number of valid licenses to be changed to &quot;Presented&quot; stage and for their synrcronization with SAP after.</inlineHelpText>
    <label>Licencias validadas</label>
    <type>Checkbox</type>
</CustomField>