force-app/main/default/objects/Linea_de_Proyecto__c/fields/Linea_principal__c.field-meta.xml
<CustomField>
    <fullName>Linea_principal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica si se trata o no del proyecto principal dentro de la oportunidad. Usado posteriormente para generar los PEPs en SAP.</description>
    <inlineHelpText>Shows if its the main opportunity proyect. Used after to generate PEP in SAP:</inlineHelpText>
    <label>Línea principal</label>
    <type>Checkbox</type>
</CustomField>