force-app/main/default/objects/Linea_de_Proyecto__c/fields/Listo_para_sincronizar__c.field-meta.xml
<CustomField>
    <fullName>Listo_para_sincronizar__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Manual check when all the fields required for the execution are completed correctly and are valid to send to SAP.</inlineHelpText>
    <label>Listo para sincronizar</label>
    <type>Checkbox</type>
</CustomField>