force-app/main/default/objects/Linea_de_Proyecto__c/fields/Margen_bruto__c.field-meta.xml
<CustomField>
    <fullName>Margen_bruto__c</fullName>
    <label>Margen bruto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>