force-app/main/default/objects/Linea_de_Proyecto__c/fields/Margen_de_licencias__c.field-meta.xml
<CustomField>
    <fullName>Margen_de_licencias__c</fullName>
    <formula>IF(
    Importe_de_licencias__c &gt; 0,
    (Importe_de_licencias__c - Coste_total_licencias__c) / Importe_de_licencias__c,
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margen de licencias</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>