force-app/main/default/objects/Linea_de_Proyecto__c/fields/Margen_de_venta__c.field-meta.xml
<CustomField>
    <fullName>Margen_de_venta__c</fullName>
    <description>Cálculo del margen en base al precio y al coste</description>
    <formula>if( Importe_de_licencias__c &gt;0,Margen_de_licencias__c,((Importe_total_2__c - Coste_estimado__c) / Importe_total_2__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margen de venta</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>