force-app/main/default/objects/Linea_de_Proyecto__c/fields/Margen_Intercompany__c.field-meta.xml
<CustomField>
    <fullName>Margen_Intercompany__c</fullName>
    <defaultValue>0.15</defaultValue>
    <label>Margen Intercompany</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>