force-app/main/default/objects/Linea_de_Proyecto__c/fields/Margen_real__c.field-meta.xml
<CustomField>
    <fullName>Margen_real__c</fullName>
    <label>Margen real</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>