force-app/main/default/objects/Linea_de_Proyecto__c/fields/Margen_Real_Economico__c.field-meta.xml
<CustomField>
    <fullName>Margen_Real_Economico__c</fullName>
    <formula>if( Margen_real__c!=0 ,Margen_real__c,(1-(Coste_Bruto__c/Precio_Venta__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margen Real</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>