force-app/main/default/objects/Linea_de_Proyecto__c/fields/Mark_UP__c.field-meta.xml
<CustomField>
    <fullName>Mark_UP__c</fullName>
    <defaultValue>0.15</defaultValue>
    <label>Mark-up</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>