force-app/main/default/objects/Linea_de_Proyecto__c/fields/Media_Coste_Bruto__c.field-meta.xml
<CustomField>
    <fullName>Media_Coste_Bruto__c</fullName>
    <formula>Coste_Bruto__c /Jornadas__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Media Coste Bruto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>