force-app/main/default/objects/Linea_de_Proyecto__c/fields/Media_Tarifa__c.field-meta.xml
<CustomField>
    <fullName>Media_Tarifa__c</fullName>
    <formula>Precio_Venta__c/Jornadas__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Precio Medio Tarifa</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>