force-app/main/default/objects/Linea_de_Proyecto__c/fields/Mercado__c.field-meta.xml
<CustomField>
    <fullName>Mercado__c</fullName>
    <formula>Text( Oportunidad__r.Mercado__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mercado</label>
    <type>Text</type>
</CustomField>