force-app/main/default/objects/Linea_de_Proyecto__c/fields/Motivo_Escrito__c.field-meta.xml
<CustomField>
    <fullName>Motivo_Escrito__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Motivo Escrito</label>
    <type>Checkbox</type>
</CustomField>