force-app/main/default/objects/Linea_de_Proyecto__c/fields/Motivo_Venta_Extra__c.field-meta.xml
<CustomField>
    <fullName>Motivo_Venta_Extra__c</fullName>
    <label>Motivo Venta Extra</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>