force-app/main/default/objects/Linea_de_Proyecto__c/fields/n_vacantes__c.field-meta.xml
<CustomField>
    <fullName>n_vacantes__c</fullName>
    <label>No. of vacancies</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>