force-app/main/default/objects/Linea_de_Proyecto__c/fields/NEW_Nombre_SAP__c.field-meta.xml
<CustomField>
    <fullName>NEW_Nombre_SAP__c</fullName>
    <label>Nombre SAP</label>
    <length>50</length>
    <type>Text</type>
</CustomField>