force-app/main/default/objects/Linea_de_Proyecto__c/fields/No_aplica_para_ejecucion__c.field-meta.xml
<CustomField>
    <fullName>No_aplica_para_ejecucion__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If this project line does not count towards the pipeline, it will not be synchronized with SAP</inlineHelpText>
    <label>No aplica para ejecución</label>
    <type>Checkbox</type>
</CustomField>