force-app/main/default/objects/Linea_de_Proyecto__c/fields/Nombre_clase_proyecto__c.field-meta.xml
<CustomField>
    <fullName>Nombre_clase_proyecto__c</fullName>
    <formula>if(Clase_PEP__c==&apos;ZA&apos;,&apos;Llave en Mano&apos;,
if(text(Tipo_de_ingreso__c)==&apos;Por producción&apos;,&apos;Servicio variable&apos;,
if(text(Tipo_de_ingreso__c)==&apos;Fijo mensual&apos;,&apos;Servicio de fijos mensuales&apos;,
if(Clase_PEP__c==&apos;ZN&apos;,&apos;Guardias&apos;,
if(Clase_PEP__c==&apos;ZK&apos;,&apos;Hosting&apos;,
if(Clase_PEP__c==&apos;ZG&apos;,&apos;Licencias&apos;,
if(Clase_PEP__c==&apos;ZG&apos;,&apos;Licencias - Renovación&apos;,
if(Clase_PEP__c==&apos;ZC&apos;,&apos;TM&apos;,&apos;NONE&apos;


))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre clase proyecto</label>
    <type>Text</type>
</CustomField>