force-app/main/default/objects/Linea_de_Proyecto__c/fields/Nombre_Clave_Periodificacion__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Clave_Periodificacion__c</fullName>
    <formula>CASE( Clave_Periodificacion__c ,
&apos;ZLCWIP&apos;, &apos;Licencias&apos;,
&apos;ZLLWIP&apos;, &apos;Llave en mano % avance&apos;,
&apos;ZTMWIP&apos;, &apos;Time &amp; Material&apos;,
&apos;ZLCWIP&apos;, &apos;Licencias&apos;,
&apos;ZLCWIP&apos;,&apos;Licencias&apos;,
&apos;ZFIJOS&apos;,&apos;Facturación Hitos fijos mensuales&apos;,
&apos;ZVAWIP&apos;,&apos;Facturacion de proyectos variables&apos;,&apos;&apos;

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre Clave Periodificacion</label>
    <type>Text</type>
</CustomField>