force-app/main/default/objects/Linea_de_Proyecto__c/fields/Nombre_Pep_Espejo__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Pep_Espejo__c</fullName>
    <formula>LEFT((SAP_name_code__c + &apos;-IC-&apos;+SAP_name_code_2__c), 40)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre_Pep_Espejo</label>
    <type>Text</type>
</CustomField>