force-app/main/default/objects/Linea_de_Proyecto__c/fields/Nombre_SAP__c.field-meta.xml
<CustomField>
    <fullName>Nombre_SAP__c</fullName>
    <formula>if(  ISBLANK( NEW_Nombre_SAP__c )  , (LEFT(TRIM(&quot;ES-&quot;+  IF(ISNULL( Oportunidad__r.Account.Nombre_SAP__c ), LEFT(TRIM(Oportunidad__r.Account.Nombre_SAP__c  ) , 11), LEFT(TRIM(Oportunidad__r.Account.Name ) , 11))  +&quot;-&quot;  + &quot;-&quot; + Area_Corta__c +&quot;-&quot;+  RIGHT(Oportunidad__r.Codigo_de_oportunidad__c, 4)  +&quot;-&quot;  +  LEFT(Oportunidad__r.Name, 11)), 40)),NEW_Nombre_SAP__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre_SAP</label>
    <type>Text</type>
</CustomField>