force-app/main/default/objects/Linea_de_Proyecto__c/fields/Nombre_Tipo_Registro__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Tipo_Registro__c</fullName>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre Tipo Registro</label>
    <type>Text</type>
</CustomField>