force-app/main/default/objects/Linea_de_Proyecto__c/fields/Oficina_tecnica__c.field-meta.xml
<CustomField>
    <fullName>Oficina_tecnica__c</fullName>
    <inlineHelpText>Technical office where the project line will be executed</inlineHelpText>
    <label>Oficina técnica</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sede__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Oficina_t_cnica</valueSetName>
    </valueSet>
</CustomField>