force-app/main/default/objects/Linea_de_Proyecto__c/fields/Oportunidad_Name__c.field-meta.xml
<CustomField>
    <fullName>Oportunidad_Name__c</fullName>
    <formula>Oportunidad__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Oportunidad Name</label>
    <type>Text</type>
</CustomField>