force-app/main/default/objects/Linea_de_Proyecto__c/fields/Opportunity_Probability__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Probability__c</fullName>
    <formula>Oportunidad__r.Probability</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Probability</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>