force-app/main/default/objects/Linea_de_Proyecto__c/fields/Org_Ventas__c.field-meta.xml
<CustomField>
    <fullName>Org_Ventas__c</fullName>
    <label>Org Ventas (Delivery Company)</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sede__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Org_Ventas</valueSetName>
    </valueSet>
</CustomField>