force-app/main/default/objects/Linea_de_Proyecto__c/fields/PEP_Interco__c.field-meta.xml
<CustomField>
    <fullName>PEP_Interco__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Interco PEP project line has to be sync with SAP</inlineHelpText>
    <label>PEP Interco</label>
    <referenceTo>Linea_de_Proyecto__c</referenceTo>
    <relationshipLabel>Project Lines</relationshipLabel>
    <relationshipName>Project_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>