force-app/main/default/objects/Linea_de_Proyecto__c/fields/Precio_Gasto__c.field-meta.xml
<CustomField>
    <fullName>Precio_Gasto__c</fullName>
    <label>Precio Gasto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>