force-app/main/default/objects/Linea_de_Proyecto__c/fields/Precio_Venta__c.field-meta.xml
<CustomField>
    <fullName>Precio_Venta__c</fullName>
    <label>Precio Venta</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>