force-app/main/default/objects/Linea_de_Proyecto__c/fields/Profile_Description__c.field-meta.xml
<CustomField>
    <fullName>Profile_Description__c</fullName>
    <label>Profile Description</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>