force-app/main/default/objects/Linea_de_Proyecto__c/fields/Project_Duration__c.field-meta.xml
<CustomField>
    <fullName>Project_Duration__c</fullName>
    <formula>Text(IF(
(Fecha_Fin__c - Fecha_Inicio__c) / 365 * 12 &lt; 1, 1, (Fecha_Fin__c - Fecha_Inicio__c ) / 365 * 12))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Duration(Months)</label>
    <type>Text</type>
</CustomField>