force-app/main/default/objects/Linea_de_Proyecto__c/fields/Project_Type_Active_Licenses__c.field-meta.xml
<CustomField>
    <fullName>Project_Type_Active_Licenses__c</fullName>
    <formula>if(AND(OR(RecordType.Name==&apos;Licencias&apos;,RecordType.Name==&apos;Licencias - Renovación&apos;,RecordType.Name==&apos;Licencias - Servicios&apos;), Licencias_activas__c&gt;0) ,&apos;Licencias&apos;,if(AND(OR(RecordType.Name==&apos;Licencias&apos;,RecordType.Name==&apos;Licencias - Renovación&apos;,RecordType.Name==&apos;Licencias - Servicios&apos;), Licencias_activas__c=0),&apos;-&apos;,&apos;Servicios&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Type Active Licenses</label>
    <type>Text</type>
</CustomField>