force-app/main/default/objects/Linea_de_Proyecto__c/fields/Proyecta_Estra__c.field-meta.xml
<CustomField>
    <fullName>Proyecta_Estra__c</fullName>
    <formula>Oportunidad__r.Proyecto_estrategico__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Proyecta Estra</label>
    <type>Checkbox</type>
</CustomField>