force-app/main/default/objects/Linea_de_Proyecto__c/fields/Refacturable__c.field-meta.xml
<CustomField>
    <fullName>Refacturable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Refacturable</label>
    <type>Checkbox</type>
</CustomField>