force-app/main/default/objects/Linea_de_Proyecto__c/fields/RegenerarForecast__c.field-meta.xml
<CustomField>
    <fullName>RegenerarForecast__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RegenerarForecast</label>
    <type>Checkbox</type>
</CustomField>