force-app/main/default/objects/Linea_de_Proyecto__c/fields/Registrar_oportunidad_en_fabricante__c.field-meta.xml
<CustomField>
    <fullName>Registrar_oportunidad_en_fabricante__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Registrar oportunidad en fabricante</label>
    <type>Checkbox</type>
</CustomField>