force-app/main/default/objects/Linea_de_Proyecto__c/fields/Responsable_de_LDP__c.field-meta.xml
<CustomField>
    <fullName>Responsable_de_LDP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>antiguamente era el campo Responsable_de_la_oferta__c</description>
    <inlineHelpText>Operation user of the area involved</inlineHelpText>
    <label>Responsable de oferta(Operaciones)</label>
    <lookupFilter>
        <active>false</active>
        <errorMessage>El responsable de la oferta tiene que estar dada de alta como gerente en SAP.</errorMessage>
        <filterItems>
            <field>User.Gerente__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Lineas_de_Proyecto</relationshipName>
    <type>Lookup</type>
</CustomField>