force-app/main/default/objects/Linea_de_Proyecto__c/fields/Responsable_de_SW__c.field-meta.xml
<CustomField>
    <fullName>Responsable_de_SW__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Usuario Responsable de SW</description>
    <label>Responsable de SW</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <filterItems>
            <field>User.Profile.Id</field>
            <operation>equals</operation>
            <value>00e0N000000i4Ke</value>
        </filterItems>
        <filterItems>
            <field>User.Profile.Id</field>
            <operation>equals</operation>
            <value>00e0N000000i4KdQAI</value>
        </filterItems>
        <filterItems>
            <field>User.Profile.Id</field>
            <operation>equals</operation>
            <value>00eP6000001SY9RIAW</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>L_neas_de_Proyecto1</relationshipName>
    <type>Lookup</type>
</CustomField>