force-app/main/default/objects/Linea_de_Proyecto__c/fields/ResponsabledeSW__c.field-meta.xml
<CustomField>
    <fullName>ResponsabledeSW__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Usuario Responsable de SW</description>
    <label>Usuario</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Profile.Id</field>
            <operation>equals</operation>
            <value>00e0N000000i4Ke</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>L_neas_de_Proyecto</relationshipName>
    <type>Lookup</type>
</CustomField>