force-app/main/default/objects/Linea_de_Proyecto__c/fields/Reviewed_by_hiring__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_by_hiring__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reviewed by demand</label>
    <type>Checkbox</type>
</CustomField>