force-app/main/default/objects/Linea_de_Proyecto__c/fields/ReviewedCsod__c.field-meta.xml
<CustomField>
    <fullName>ReviewedCsod__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ReviewedCsod</label>
    <type>Checkbox</type>
</CustomField>