force-app/main/default/objects/Linea_de_Proyecto__c/fields/SAP_name_code_2__c.field-meta.xml
<CustomField>
    <fullName>SAP_name_code_2__c</fullName>
    <formula>RIGHT(Execution_SAP_Name__c,( LEN(Execution_SAP_Name__c) -(FIND(&apos;-&apos; , Execution_SAP_Name__c,12)-1)))</formula>
    <label>SAP name code 2</label>
    <type>Text</type>
</CustomField>