force-app/main/default/objects/Linea_de_Proyecto__c/fields/SAP_name_code__c.field-meta.xml
<CustomField>
    <fullName>SAP_name_code__c</fullName>
    <formula>LEFT(Execution_SAP_Name__c,((FIND(&apos;-&apos; , Execution_SAP_Name__c,6)-1)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SAP name code</label>
    <type>Text</type>
</CustomField>