force-app/main/default/objects/Linea_de_Proyecto__c/fields/Sin_Contrato__c.field-meta.xml
<CustomField>
    <fullName>Sin_Contrato__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Sin Contrato</label>
    <type>Checkbox</type>
</CustomField>