force-app/main/default/objects/Linea_de_Proyecto__c/fields/Sin_Controlling__c.field-meta.xml
<CustomField>
    <fullName>Sin_Controlling__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sin Controlling</label>
    <type>Checkbox</type>
</CustomField>