force-app/main/default/objects/Linea_de_Proyecto__c/fields/Sincronizado_SAP_Preventa__c.field-meta.xml
<CustomField>
    <fullName>Sincronizado_SAP_Preventa__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sincronizado SAP Preventa</label>
    <type>Checkbox</type>
</CustomField>