force-app/main/default/objects/Linea_de_Proyecto__c/fields/Soy_Responsable_LDP__c.field-meta.xml
<CustomField>
    <fullName>Soy_Responsable_LDP__c</fullName>
    <description>Se pone a TRUE si el usuario logeado es responsable de la LDP</description>
    <formula>$User.Id = Responsable_de_LDP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Soy_Responsable_LDP</label>
    <type>Checkbox</type>
</CustomField>