force-app/main/default/objects/Linea_de_Proyecto__c/fields/SoyelGerente__c.field-meta.xml
<CustomField>
    <fullName>SoyelGerente__c</fullName>
    <formula>OR( Responsable_de_LDP__r.Id= $User.Id , Responsable_de_SW__r.Id=$User.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SoyelGerente</label>
    <type>Checkbox</type>
</CustomField>