force-app/main/default/objects/Linea_de_Proyecto__c/fields/SoyPropietarioOpor__c.field-meta.xml
<CustomField>
    <fullName>SoyPropietarioOpor__c</fullName>
    <formula>$User.Id = Oportunidad__r.Owner.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SoyPropietarioOpor</label>
    <type>Checkbox</type>
</CustomField>