force-app/main/default/objects/Linea_de_Proyecto__c/fields/Strategic_Partner__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Partner__c</fullName>
    <label>Strategic Partner</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Strategic_Partner</valueSetName>
    </valueSet>
</CustomField>