force-app/main/default/objects/Linea_de_Proyecto__c/fields/Tarifa_Jornadas__c.field-meta.xml
<CustomField>
    <fullName>Tarifa_Jornadas__c</fullName>
    <label>Tarifa Jornadas</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>