force-app/main/default/objects/Linea_de_Proyecto__c/fields/Tecnologia__c.field-meta.xml
<CustomField>
    <fullName>Tecnologia__c</fullName>
    <label>Competencia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Tecnologias</valueSetName>
    </valueSet>
</CustomField>