force-app/main/default/objects/Linea_de_Proyecto__c/fields/TEST__c.field-meta.xml
<CustomField>
    <fullName>TEST__c</fullName>
    <label>TEST</label>
    <type>TextArea</type>
</CustomField>